--- a/index.ipynb
+++ b/index.ipynb
@@ -102,7 +102,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your code here"
+    "# Your code hero\n",
+    "pass"
    ]
   },
   {
